added contact form

--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./images/DW_LOGO.png">
         <title>Projects</title>
-        <meta name="author" content="Dionna C. Womack">
+        <meta name="author" content="Dionna Womack">
         <meta name="description" content="A page for multiple projects.">
         <link rel="stylesheet" href="./css/style.css">
     </head>
