--- a/public/contact.html
+++ b/public/contact.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="./images/DW_LOGO.png">
-        <title>Contact</title>
-        <meta name="author" content="Dionna Womack">
-        <meta name="description" content="A page to contact artist.">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&family=Poiret+One&display=swap" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
 
-    <body>
-        <div>Contact</div>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images/DW_LOGO.png">
+    <title>Contact</title>
+    <meta name="author" content="Dionna Womack">
+    <meta name="description" content="A page to contact artist.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
 
-        <form action="/mail" method="post">
-            <p>
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="user_name" />
-            </p>
-            <p>
-              <label for="mail">Email:</label>
-              <input type="email" id="mail" name="user_email" />
-            </p>
-            <p>
-              <label for="msg">Message:</label>
-              <textarea id="msg" name="user_message"></textarea>
-            </p>
-            <p class="button">
-                <button id="contact-form-button" type="submit">Send your message</button>
-              </p>     
-          </form>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"            
-          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
+  <body>
+    <div>Contact</div>
+
+
+
+    <form id="contact-form" clas="needs-validatio">
+      <div class="row m-5">
+          <div class="col">
+            <input id="first-name" type="text" class="form-control" placeholder="First name" aria-label="First name" required>
+          </div>
+        <div class="col">
+          <input id="last-name" type="text" class="form-control" placeholder="Last name" aria-label="Last name" required>
+        </div>
+      </div>
+      <div class="row m-5">
+      <div class="mb-3">
+        <div id="emailFeedback" class="invalid-feedback">
+          Format should be example@example.com
+        </div>
+        <input id="mail" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address" aria-describedby="emailHelp" required>
+      </div>
+    </div>
+    <div class="row m-5">
+      <div class="mb-3">
+        <textarea class="form-control" id="msg" rows="3" placeholder="Enter your message or comment."></textarea>
+      </div>
+    </div>
+
+      <button id="contact-form-button" type="submit" class="btn btn-primary">Submit</button>
+    </form>
+         
         
-          <script type="module" src="./js/contact.js"></script>
-    </body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"            
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
+        <script type="module" src="./js/contact.js"></script>
+  </body>
 </html>
