--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
     </head>
 
     <body>
-        <div id="testButton" class="btn btn-primary">Click Me</div>
+    <!-- <div id="testButton" class="btn btn-warning">Click me</div> -->
      <!-- Header area -->
   <header>
-    <nav id="top-nav" class="navbar navbar-expand navbar-dark fixed-top bg-dark" aria-label="Navbar">
+    <nav id="top-nav" class="navbar navbar-expand navbar-light fixed-top bg-light" aria-label="Navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#splash">
-          <img class="me-auto" src="./images/bk.png" height="45" role="img" alt="">
+          <img class="me-auto" src="./images/background_MACT.jpg" height="45" role="img" alt="">
         </a>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto">
@@ -45,7 +45,7 @@
             </li>
           </ul>
           <div>
-            <button id="wallet-connect" type="button" class="btn btn-outline-light">Connect
+            <button id="wallet-connect" type="button" class="btn btn-outline-dark text-dark">Connect
               Wallet</button>
           </div>
         </div>
@@ -58,7 +58,7 @@
     <section>
       <div id="splash" class="area">
         <div class="spacer"></div>
-        <div id="hero-text" class="position-absolute top-50 start-50 translate-middle text-light text-center">
+        <div id="hero-text" class="position-absolute top-50 start-50 translate-middle text-dark text-center">
           <h1 class="display-1">Dionna Womack</h1>
           <h2>Creative Technologist</h2>
           <p>Generative Art NFT Project</p>
